--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Adriaan's projects"
-name: "Adriaan's projects"
+title: "Adriaan van Rossum's projects"
+name: "Adriaan van Rossum's projects"
 description: 'Adriaan does a lot of things, find out what!'
 author:
   name: 'Adriaan van Rossum'
